# pool_type

./: CMakeLists.txt  README.md  defines.h  document.hpp  emitter.hpp  main.cpp
.github/workflows/: build.yml  coverage.yml
cmake/: BuildDefaults.cmake
cmake/functions/: FetchContentGoogleTest.cmake
test/: CMakeLists.txt  emitter.cpp  finite_state_machine.cpp
